--- a/docs/CHANGELOG.adoc
+++ b/docs/CHANGELOG.adoc
@@ -1,4 +1,4 @@
 = Changelog
 
-All notable changes to this project will be documented in this file. This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
+All notable changes to this project will be documented in this file. This project adheres to link:https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
