readme: add link to Changelog

--- a/docs/Changelog.adoc
+++ b/docs/Changelog.adoc
@@ -1,4 +1,4 @@
 = Changelog
 
-All notable changes to this project will be documented in this file. This project adheres to link:https://semver.org/spec/v2.0.0.html[Semantic Versioning].
+All notable changes to this project are documented in this file. This project adheres to link:https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
