--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,7 @@
+== Changelog
+
+All notable changes to this project are documented in link:docs/Changelog.adoc[docs/Changelog.adoc] file.
+
 == Full documentation
 
 See the link:docs/README.adoc[docs/README.adoc] for full documentation.
