--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,7 @@
 == Changelog
 
-All notable changes to this project are documented in link:docs/Changelog.adoc[docs/Changelog.adoc] file.
+All notable changes to this project are documented in link:docs/Changelog.adoc[docs/Changelog.adoc] file. 
+This project adheres to link:https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
 == Full documentation
 
