--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -1,3 +1,8 @@
+
+- link:Changelog.adoc[Changelog]
++
+All notable changes to this project grouped by version.
+
 == License
 
 Except where otherwise noted, documentation is licensed under a link:LICENSE[Creative Commons Attribution 4.0 International license].
