--- a/README.adoc
+++ b/README.adoc
@@ -9,5 +9,5 @@ See the link:docs/README.adoc[docs/README.adoc] for full documentation.
 
 == License
 
-Unless otherwise noted, the source code is distributed under the link:LICENSE[MIT License]. 
+Except where otherwise noted, the source code is distributed under the link:LICENSE[MIT License]. 
 Except where otherwise noted, documentation is licensed under a link:docs/LICENSE[Creative Commons Attribution 4.0 International license].
