--- a/docs/License.adoc
+++ b/docs/License.adoc
@@ -1,3 +1,5 @@
 = License
 
-Except where otherwise noted, the source code is distributed under the link:/LICENSE[MIT License]. Except where otherwise noted, documentation is licensed under a link:/docs/LICENSE[Creative Commons Attribution 4.0 International license].
+Except where otherwise noted, the source code is distributed under the link:/LICENSE[MIT License]. 
+
+Except where otherwise noted, documentation is licensed under a link:/docs/LICENSE[Creative Commons Attribution 4.0 International license].
