--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -1,7 +1,7 @@
 
 - link:Changelog.adoc[Changelog]
 +
-All notable changes to this project grouped by version.
+All notable changes of this project grouped by version.
 - link:License.adoc[License]
 +
 Information about the licenses under which the project source code and documentation are distributed.
